@@ -5,6 +5,9 @@
  * Agregada la funcion "rsslista_cb" que muestra la lista de feeds.
  * Cambiado el formato del Changelog. Las entradas anteriores se conservan con
      fecha 31 de diciembre del 2006.
+ * Agregada la ayuda para las funciones de gestion RSS.
+ * Publicado como beta2.
+
 
 2006-12-31  GatoLoko  <GatoLoko@gmail.com>
 
